[18.September 2008]
- entity.rb, group.rb: Up to now every Entity had just one rectangle common
  for collisions and graphics. Now these two can be defined different
  (usually the collision rect is smaller and inside the graphics rect)

[10.September 2008]
- schwerengine.rb: Log4r isn't loaded if it has been loaded before
  (it's a small hack for freeVikings :) )

[28. August 2008]
- Location.<< now returns the Location itself (so you can write 
  C++-streams-like chained expressions)
- new methods for (Rectangle.new_empty; empty? bottom=,right=, area, common)
- Location now "gives" itself to ActiveObjects during their registering in 
  the same way as to Sprites