@@ -1,0 +1,12 @@
+# tiledmap2loadstrategy.rb
+# igneus 2.10.2008
+
+module FreeVikings
+
+  # Loader class for loading Map2 (not Map!) from map file created
+  # by Tiled (http://mapeditor.org)
+
+  class TiledMap2LoadStrategy
+
+  end
+end
